--- a/signup.html
+++ b/signup.html
@@ -184,6 +184,7 @@
             }
         }
     </style>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <div class="signup-wrapper">
@@ -194,7 +195,7 @@
             <input type="password" placeholder="Password" required>
             <input type="password" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
-            <button type="button" class="google-signup" onclick="signUpWithGoogle()">
+            <button type="button" class="google-signup" id="googleSignInButton">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" alt="Google Logo">Or Sign Up with Google
             </button>
         </form>
@@ -211,9 +212,22 @@
             window.location.href = 'index.html';
         }
 
-        function signUpWithGoogle() {
-            // This is a placeholder. In a real application, this should initiate the Google OAuth2 flow.
-            window.location.href = 'https://accounts.google.com/o/oauth2/auth?client_id=YOUR_GOOGLE_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&response_type=code&scope=email%20profile';
+        function handleCredentialResponse(response) {
+            console.log("Encoded JWT ID token: " + response.credential);
+            // Here you would send the JWT ID token to your server for verification and user creation.
+        }
+
+        window.onload = function() {
+            google.accounts.id.initialize({
+                client_id: "964326880330-j9pcvobr0rn8ivvtehlnp36mi81oqciv.apps.googleusercontent.com",
+                callback: handleCredentialResponse
+            });
+
+            google.accounts.id.renderButton(
+                document.getElementById("googleSignInButton"), 
+                { theme: "outline", size: "large" }  /            );
+
+            google.accounts.id.prompt(); 
         }
     </script>
 </body>
