--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
             height: 100vh;
             margin: 0;
             overflow: hidden;
+            flex-direction: column;
+        }
+
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 15px 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
+        }
+
+        .navbar button {
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 0 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background 0.3s ease, transform 0.3s ease;
+        }
+
+        .navbar button:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: scale(1.05);
         }
 
         .login-wrapper {
@@ -30,6 +61,7 @@
             position: relative;
             transition: transform 0.5s ease;
             backdrop-filter: blur(10px);
+            margin-top: 80px;
         }
 
         h2 {
@@ -85,20 +117,15 @@
         }
 
         .dashboard-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
+            margin-top: 10px;
             background: linear-gradient(45deg, #1cb5e0, #000851);
-            color: white;
+            padding: 10px 20px;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
             transition: all 0.3s ease;
             width: auto;
-            min-width: 150px;
-            max-width: 250px;
             text-align: center;
             box-shadow: 0 7px 20px rgba(0, 133, 81, 0.5);
             opacity: 1;
@@ -111,6 +138,27 @@
             opacity: 0.5;
             pointer-events: none;
             box-shadow: none;
+        }
+
+        .google-login-button {
+            width: 100%;
+            padding: 15px;
+            margin-top: 15px;
+            background: #4285F4;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 25px rgba(66, 133, 244, 0.7);
+        }
+
+        .google-login-button:hover {
+            background: #357ae8;
+            transform: scale(1.08);
+            box-shadow: 0 15px 35px rgba(66, 133, 244, 0.9);
         }
 
         .flip-link {
@@ -130,6 +178,11 @@
         @media (max-width: 768px) {
             body {
                 padding: 20px;
+            }
+
+            .navbar button {
+                margin: 0 10px;
+                padding: 8px 16px;
             }
 
             .login-wrapper {
@@ -158,9 +211,19 @@
                 max-width: 200px;
                 font-size: 14px;
             }
+
+            .google-login-button {
+                padding: 12px;
+                font-size: 16px;
+            }
         }
 
         @media (max-width: 480px) {
+            .navbar button {
+                margin: 0 5px;
+                padding: 6px 12px;
+            }
+
             .login-wrapper {
                 padding: 20px;
                 border-radius: 10px;
@@ -177,6 +240,11 @@
             }
 
             button {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            .google-login-button {
                 padding: 10px;
                 font-size: 14px;
             }
@@ -205,6 +273,12 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <button onclick="window.location.href='tos.html'">TOS</button>
+        <button onclick="window.location.href='privacy.html'">Privacy Policy</button>
+        <button onclick="window.location.href='docs.html'">Website Docs</button>
+    </div>
+
     <div class="login-wrapper">
         <h2>Taskmatrix Login</h2>
         <form id="loginForm">
@@ -212,6 +286,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
+        <button class="google-login-button">or Login with Google</button>
         <span class="flip-link" onclick="flipToSignup()">Create Account</span>
     </div>
 
