--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
             background: rgba(255, 255, 255, 0.1);
             color: white;
             border: none;
-            padding: 8px 15px;
-            margin: 0 10px;
-            border-radius: 8px;
+            padding: 8px 12px;
+            margin: 0 8px;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 13px;
+            font-size: 12px;
             transition: background 0.3s ease, transform 0.3s ease;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            min-width: 80px;
+            text-align: center;
         }
 
         .navbar button:hover {
@@ -183,9 +185,9 @@
             }
 
             .navbar button {
-                margin: 0 10px;
-                padding: 8px 14px;
-                font-size: 12px;
+                margin: 0 6px;
+                padding: 6px 10px;
+                font-size: 11px;
             }
 
             .login-wrapper {
@@ -223,9 +225,9 @@
 
         @media (max-width: 480px) {
             .navbar button {
-                margin: 0 5px;
-                padding: 6px 10px;
-                font-size: 11px;
+                margin: 0 4px;
+                padding: 5px 8px;
+                font-size: 10px;
             }
 
             .login-wrapper {
