--- a/index.html
+++ b/index.html
@@ -179,11 +179,16 @@
             color: #ff6f91;
         }
 
-        @media (max-width: 768px) {
-            body {
-                padding: 20px;
+        @media (max-width: 1024px) {
+            .navbar button {
+                margin: 0 10px;
+                padding: 8px 14px;
+                font-size: 14px;
+                min-width: 60px;
             }
+        }
 
+        @media (max-width: 768px) {
             .navbar button {
                 margin: 0 6px;
                 padding: 6px 10px;
@@ -228,6 +233,7 @@
                 margin: 0 4px;
                 padding: 5px 8px;
                 font-size: 10px;
+                min-width: 50px;
             }
 
             .login-wrapper {
@@ -299,6 +305,24 @@
     <button class="dashboard-button" id="dashboardBtn" onclick="redirectToDashboard()">Skip to Dashboard</button>
 
     <script>
+        function detectDeviceType() {
+            const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+            return isMobile ? 'mobile' : 'desktop';
+        }
+
+        function adjustForDevice() {
+            const deviceType = detectDeviceType();
+
+            if (deviceType === 'desktop') {
+                document.querySelector('.navbar button').style.padding = '8px 12px';
+                document.querySelector('.navbar button').style.fontSize = '12px';
+            } else {
+                // On mobile, CSS media queries handle adjustments
+            }
+        }
+
+        adjustForDevice();
+
         const authorizedEmails = ['grabem1@students.goshenschools.org', 'asdwwas233@gmail.com'];
 
         function checkAdminAccess(email) {
