--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             height: 100vh;
-            background-color: #121212;
+            background-color: #0d1b2a;
             color: #ffffff;
             display: flex;
             overflow: hidden;
@@ -24,8 +24,8 @@
         }
 
         .sidebar {
-            width: 240px;
-            background: #1f1f1f;
+            width: 260px;
+            background: #1b263b;
             padding: 20px;
             box-shadow: 4px 0 15px rgba(0, 0, 0, 0.4);
             flex-shrink: 0;
@@ -35,37 +35,39 @@
         }
 
         .sidebar h2 {
-            font-size: 24px;
+            font-size: 26px;
             text-align: center;
-            margin-bottom: 30px;
-            color: #ffffff;
+            margin-bottom: 40px;
+            color: #e0e1dd;
+            text-shadow: 0 0 5px #4c566a;
         }
 
         .sidebar .nav-item {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .sidebar .nav-item a {
             text-decoration: none;
-            color: #b8b8b8;
+            color: #8d99ae;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 20px;
             display: block;
-            padding: 10px 18px;
-            border-radius: 6px;
-            transition: background 0.3s ease, color 0.3s ease;
+            padding: 14px 20px;
+            border-radius: 10px;
+            transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
         }
 
         .sidebar .nav-item a:hover,
         .sidebar .nav-item a.active {
-            background: #373737;
+            background: #2e3b55;
             color: #ffffff;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
 
         .content-area {
             flex-grow: 1;
-            padding: 30px;
-            background: #121212;
+            padding: 40px;
+            background: #0d1b2a;
             display: flex;
             flex-direction: column;
             overflow-y: auto;
@@ -76,14 +78,15 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 25px;
+            margin-bottom: 35px;
         }
 
         .content-header h1 {
-            font-size: 30px;
+            font-size: 36px;
             font-weight: bold;
-            color: #ffffff;
+            color: #e0e1dd;
             margin: 0;
+            text-shadow: 0 0 5px #4c566a;
         }
 
         .content-header .user-info {
@@ -92,39 +95,41 @@
         }
 
         .user-info img {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
-            margin-right: 10px;
+            margin-right: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
         .user-info span {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
             color: #ffffff;
         }
 
         .content-section {
-            background: #1f1f1f;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
-            margin-bottom: 25px;
+            background: #1b263b;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            margin-bottom: 30px;
             transition: all 0.3s ease;
         }
 
         .content-section h2 {
-            font-size: 26px;
-            margin-bottom: 10px;
-            color: #e94560;
+            font-size: 30px;
+            margin-bottom: 20px;
+            color: #ff2e63;
+            text-shadow: 0 0 10px #4c566a;
         }
 
         .content-section p,
         .content-section ul {
-            font-size: 16px;
+            font-size: 18px;
             line-height: 1.6;
-            margin-bottom: 15px;
-            color: #cccccc;
+            margin-bottom: 20px;
+            color: #e0e1dd;
         }
 
         .content-section ul {
@@ -132,14 +137,14 @@
         }
 
         .content-section ul li {
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
 
         .content-section label {
             display: block;
-            margin-bottom: 8px;
-            font-size: 16px;
-            color: #ffffff;
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: #e0e1dd;
         }
 
         .content-section input[type="text"],
@@ -148,13 +153,13 @@
         .content-section input[type="date"],
         .content-section input[type="time"] {
             width: 100%;
-            padding: 12px;
-            margin-bottom: 15px;
+            padding: 14px;
+            margin-bottom: 20px;
             border: none;
-            border-radius: 8px;
-            background: #333333;
+            border-radius: 10px;
+            background: #2e3b55;
             color: white;
-            font-size: 16px;
+            font-size: 18px;
             box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
         }
@@ -164,49 +169,49 @@
         .content-section select:focus,
         .content-section input[type="date"]:focus,
         .content-section input[type="time"]:focus {
-            background: #444444;
+            background: #3a4a69;
             outline: none;
-            box-shadow: 0 0 10px rgba(233, 69, 96, 0.5);
+            box-shadow: 0 0 15px rgba(255, 46, 99, 0.5);
         }
 
         .content-section button {
-            padding: 12px 22px;
-            background: #e94560;
+            padding: 14px 28px;
+            background: #ff2e63;
             border: none;
-            border-radius: 8px;
+            border-radius: 10px;
             cursor: pointer;
             color: white;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 18px;
             transition: background 0.3s ease;
-            box-shadow: 0 5px 20px rgba(233, 69, 96, 0.3);
+            box-shadow: 0 10px 30px rgba(255, 46, 99, 0.3);
         }
 
         .content-section button:hover {
-            background: #d03350;
-            box-shadow: 0 5px 20px rgba(233, 69, 96, 0.5);
+            background: #d81b60;
+            box-shadow: 0 10px 30px rgba(255, 46, 99, 0.5);
         }
 
         .assignment-list {
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .assignment-item {
-            background: #333333;
-            padding: 18px;
-            border-radius: 8px;
-            margin-bottom: 15px;
+            background: #2e3b55;
+            padding: 22px;
+            border-radius: 10px;
+            margin-bottom: 20px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: flex-start;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s ease;
         }
 
         .assignment-item:hover {
-            transform: scale(1.02);
-            box-shadow: 0 2px 20px rgba(233, 69, 96, 0.5);
+            transform: scale(1.05);
+            box-shadow: 0 5px 30px rgba(255, 46, 99, 0.5);
         }
 
         .assignment-item div {
@@ -214,44 +219,44 @@
         }
 
         .assignment-item span {
-            font-size: 16px;
+            font-size: 18px;
             color: #ffffff;
-            margin-bottom: 6px;
+            margin-bottom: 8px;
             display: block;
         }
 
         .assignment-item p {
             margin-top: 0;
-            font-size: 14px;
+            font-size: 16px;
             color: #cccccc;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .assignment-item time {
-            font-size: 13px;
+            font-size: 14px;
             color: #bbbbbb;
         }
 
         .assignment-actions {
             display: flex;
             justify-content: flex-end;
-            gap: 8px;
+            gap: 10px;
         }
 
         .assignment-actions button {
-            padding: 6px 12px;
-            font-size: 14px;
-            background: #444444;
+            padding: 10px 16px;
+            font-size: 16px;
+            background: #3a4a69;
             color: white;
-            border-radius: 6px;
+            border-radius: 8px;
             border: none;
             cursor: pointer;
             transition: background 0.3s ease, box-shadow 0.3s ease;
         }
 
         .assignment-actions button:hover {
-            background: #555555;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            background: #4b5b7d;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         /* Responsive Design */
@@ -260,7 +265,7 @@
                 width: 100%;
                 flex-direction: row;
                 justify-content: space-around;
-                padding: 15px;
+                padding: 20px;
             }
 
             .content-area {
@@ -272,24 +277,28 @@
                 width: 100%;
                 max-width: 100%;
             }
+
+            .content-header h1 {
+                font-size: 28px;
+            }
         }
 
         @media (max-width: 480px) {
             .content-header h1 {
-                font-size: 22px;
+                font-size: 24px;
             }
 
             .sidebar h2 {
-                font-size: 18px;
+                font-size: 20px;
             }
 
             .sidebar .nav-item a {
-                font-size: 14px;
-                padding: 8px;
+                font-size: 16px;
+                padding: 10px;
             }
 
             .user-info span {
-                font-size: 14px;
+                font-size: 16px;
             }
         }
     </style>
@@ -313,7 +322,7 @@
             <div class="content-header">
                 <h1>Dashboard</h1>
                 <div class="user-info">
-                    <img src="https://via.placeholder.com/40" alt="User Avatar">
+                    <img src="https://via.placeholder.com/50" alt="User Avatar">
                     <span>Welcome, User</span>
                 </div>
             </div>
