--- a/dashboard.html
+++ b/dashboard.html
@@ -262,14 +262,14 @@
         .changelog {
             margin-top: 40px;
             background: #2e3b55;
-            padding: 20px;
+            padding: 25px;
             border-radius: 10px;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
         }
 
         .changelog h3 {
-            font-size: 24px;
-            margin-bottom: 15px;
+            font-size: 26px;
+            margin-bottom: 20px;
             color: #ff2e63;
             text-shadow: 0 0 5px #4c566a;
         }
@@ -280,9 +280,32 @@
         }
 
         .changelog ul li {
-            margin-bottom: 10px;
-            font-size: 16px;
+            margin-bottom: 12px;
+            font-size: 18px;
             color: #e0e1dd;
+        }
+
+        .changelog .upcoming {
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 1px solid #3a4a69;
+        }
+
+        .changelog .upcoming h4 {
+            font-size: 22px;
+            color: #ffffff;
+            margin-bottom: 15px;
+            text-shadow: 0 0 5px #4c566a;
+        }
+
+        .changelog .upcoming ul {
+            padding-left: 20px;
+        }
+
+        .changelog .upcoming ul li {
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: #cccccc;
         }
 
         /* Responsive Design */
@@ -369,6 +392,13 @@
                         <li>Enhanced the class reminder feature to support notifications.</li>
                         <li>Improved overall UI with advanced visual effects and transitions.</li>
                     </ul>
+                    <div class="upcoming">
+                        <h4>What's Going to Be Added Soon:</h4>
+                        <ul>
+                            <li>Going to add video games to the website.</li>
+                            <li>Going to add an upcoming proxy.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
