--- a/index.html
+++ b/index.html
@@ -297,6 +297,23 @@
             animation: confettiFall 5s ease forwards, confettiRotate 1.5s infinite linear;
         }
 
+        .glow-effect {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(255, 46, 99, 0.4), rgba(0, 0, 0, 0));
+            opacity: 0;
+            z-index: 9998;
+            pointer-events: none;
+            transition: opacity 0.5s ease;
+        }
+
+        .glow-effect.active {
+            opacity: 1;
+        }
+
         @keyframes celebrationAnimation {
             0% {
                 transform: scale(0);
@@ -478,6 +495,8 @@
         <h1>Assignment Completed!</h1>
     </div>
 
+    <div class="glow-effect" id="glowEffect"></div>
+
     <script>
         function showContent(section) {
             document.querySelectorAll('.content-section').forEach(function (content) {
@@ -570,10 +589,13 @@
 
         function showCelebration() {
             const celebration = document.getElementById('celebration');
+            const glowEffect = document.getElementById('glowEffect');
             celebration.classList.add('active');
+            glowEffect.classList.add('active');
             createConfetti();
             setTimeout(() => {
                 celebration.classList.remove('active');
+                glowEffect.classList.remove('active');
                 removeConfetti();
             }, 5000);
         }
@@ -585,6 +607,7 @@
                 confetti.classList.add('confetti');
                 confetti.style.left = Math.random() * 100 + '%';
                 confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
+                confetti.style.transform = `rotate(${Math.random() * 360}deg)`;
                 celebration.appendChild(confetti);
             }
         }
