--- a/index.html
+++ b/index.html
@@ -287,31 +287,25 @@
             animation: celebrationAnimation 1s ease forwards;
         }
 
-        .confetti {
+        .balloon {
             position: absolute;
-            width: 10px;
+            width: 30px;
+            height: 50px;
+            background-color: #ff2e63;
+            border-radius: 50%;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            animation: balloonFloat 5s ease-in forwards;
+        }
+
+        .balloon::before {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            width: 2px;
             height: 20px;
             background-color: #ff2e63;
-            opacity: 0;
-            transform-origin: left top;
-            animation: confettiFall 5s ease forwards, confettiRotate 1.5s infinite linear;
-        }
-
-        .glow-effect {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle, rgba(255, 46, 99, 0.4), rgba(0, 0, 0, 0));
-            opacity: 0;
-            z-index: 9998;
-            pointer-events: none;
-            transition: opacity 0.5s ease;
-        }
-
-        .glow-effect.active {
-            opacity: 1;
+            transform: translateX(-50%);
         }
 
         @keyframes celebrationAnimation {
@@ -326,23 +320,14 @@
             }
         }
 
-        @keyframes confettiFall {
+        @keyframes balloonFloat {
             0% {
-                top: -10%;
-                opacity: 1;
-            }
-            100% {
-                top: 110%;
+                bottom: -50%;
                 opacity: 0;
             }
-        }
-
-        @keyframes confettiRotate {
-            0% {
-                transform: rotate(0deg);
-            }
             100% {
-                transform: rotate(360deg);
+                bottom: 100%;
+                opacity: 1;
             }
         }
 
@@ -434,7 +419,8 @@
                     <h3>Changelog</h3>
                     <ul>
                         <li>Added dark blue and dark purple theme for a modern, sleek look.</li>
-                        <li>Enhanced the class reminder feature to support notifications.</li>
+                        <li>Added celebration animation to when completed your assignments.</li>
+                        <li>Improved the class reminder feature to support notifications.</li>
                         <li>Improved overall UI with advanced visual effects and transitions.</li>
                     </ul>
                     <div class="upcoming">
@@ -494,8 +480,6 @@
     <div class="celebration" id="celebration">
         <h1>Assignment Completed!</h1>
     </div>
-
-    <div class="glow-effect" id="glowEffect"></div>
 
     <script>
         function showContent(section) {
@@ -589,31 +573,27 @@
 
         function showCelebration() {
             const celebration = document.getElementById('celebration');
-            const glowEffect = document.getElementById('glowEffect');
             celebration.classList.add('active');
-            glowEffect.classList.add('active');
-            createConfetti();
+            createBalloons();
             setTimeout(() => {
                 celebration.classList.remove('active');
-                glowEffect.classList.remove('active');
-                removeConfetti();
+                removeBalloons();
             }, 5000);
         }
 
-        function createConfetti() {
+        function createBalloons() {
             const celebration = document.getElementById('celebration');
-            for (let i = 0; i < 100; i++) {
-                const confetti = document.createElement('div');
-                confetti.classList.add('confetti');
-                confetti.style.left = Math.random() * 100 + '%';
-                confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-                confetti.style.transform = `rotate(${Math.random() * 360}deg)`;
-                celebration.appendChild(confetti);
+            for (let i = 0; i < 50; i++) {
+                const balloon = document.createElement('div');
+                balloon.classList.add('balloon');
+                balloon.style.left = Math.random() * 100 + '%';
+                balloon.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
+                celebration.appendChild(balloon);
             }
         }
 
-        function removeConfetti() {
-            document.querySelectorAll('.confetti').forEach(confetti => confetti.remove());
+        function removeBalloons() {
+            document.querySelectorAll('.balloon').forEach(balloon => balloon.remove());
         }
 
         function editAssignment(index) {
