--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             background-color: #ff2e63;
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-            animation: balloonFloat 5s ease-in forwards;
+            animation: balloonFall 5s ease-in forwards;
         }
 
         .balloon::before {
@@ -320,13 +320,13 @@
             }
         }
 
-        @keyframes balloonFloat {
+        @keyframes balloonFall {
             0% {
-                bottom: -50%;
+                top: -20%;
                 opacity: 0;
             }
             100% {
-                bottom: 100%;
+                top: 100%;
                 opacity: 1;
             }
         }
