--- a/index.html
+++ b/index.html
@@ -7,86 +7,98 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+        /* General Layout and Style */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
-            height: 100vh;
+            padding: 0;
             background-color: #0d1b2a;
             color: #ffffff;
             display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             overflow: hidden;
         }
 
-        .container {
+        .dashboard-container {
             display: flex;
-            width: 100%;
-            height: 100%;
+            width: 95%;
+            max-width: 1400px;
+            height: 90%;
+            border-radius: 15px;
+            background: linear-gradient(145deg, #1b263b, #0a1524);
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 20px rgba(255, 255, 255, 0.05);
         }
 
+        /* Sidebar Styling */
         .sidebar {
-            width: 260px;
-            background: #1b263b;
-            padding: 20px;
-            box-shadow: 4px 0 15px rgba(0, 0, 0, 0.4);
-            flex-shrink: 0;
+            width: 280px;
+            background: #0d1b2a;
+            border-right: 2px solid #1b263b;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            align-items: center;
+            padding: 30px 20px;
+            box-shadow: 10px 0 20px rgba(0, 0, 0, 0.5);
         }
 
         .sidebar h2 {
-            font-size: 26px;
-            text-align: center;
-            margin-bottom: 40px;
-            color: #e0e1dd;
-            text-shadow: 0 0 5px #4c566a;
+            font-size: 28px;
+            color: #ff2e63;
+            text-shadow: 0 0 8px rgba(255, 46, 99, 0.8);
+            margin-bottom: 50px;
         }
 
         .sidebar .nav-item {
-            margin-bottom: 20px;
+            width: 100%;
+            margin-bottom: 30px;
         }
 
         .sidebar .nav-item a {
             text-decoration: none;
-            color: #8d99ae;
-            font-weight: bold;
+            color: #ffffff;
             font-size: 20px;
+            font-weight: bold;
+            padding: 15px 20px;
+            border-radius: 12px;
             display: block;
-            padding: 14px 20px;
-            border-radius: 10px;
-            transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+            text-align: center;
+            transition: background 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         .sidebar .nav-item a:hover,
         .sidebar .nav-item a.active {
-            background: #2e3b55;
+            background: #ff2e63;
             color: #ffffff;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            transform: scale(1.05);
+            box-shadow: 0 5px 25px rgba(255, 46, 99, 0.5);
         }
 
+        /* Content Area Styling */
         .content-area {
             flex-grow: 1;
             padding: 40px;
-            background: #0d1b2a;
+            overflow-y: auto;
             display: flex;
             flex-direction: column;
-            overflow-y: auto;
-            transition: all 0.3s ease;
+            gap: 40px;
         }
 
         .content-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 35px;
+            border-bottom: 2px solid #1b263b;
+            padding-bottom: 20px;
         }
 
         .content-header h1 {
             font-size: 36px;
             font-weight: bold;
-            color: #e0e1dd;
-            margin: 0;
-            text-shadow: 0 0 5px #4c566a;
+            color: #ff2e63;
+            text-shadow: 0 0 10px #ff2e63;
         }
 
         .content-header .user-info {
@@ -98,30 +110,30 @@
             width: 50px;
             height: 50px;
             border-radius: 50%;
-            margin-right: 15px;
+            margin-right: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
         .user-info span {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
-            color: #ffffff;
+            color: #e0e1dd;
         }
 
+        /* Content Section Styling */
         .content-section {
             background: #1b263b;
             padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            margin-bottom: 30px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5), 0 0 20px rgba(255, 46, 99, 0.3);
             transition: all 0.3s ease;
         }
 
         .content-section h2 {
-            font-size: 30px;
+            font-size: 32px;
             margin-bottom: 20px;
             color: #ff2e63;
-            text-shadow: 0 0 10px #4c566a;
+            text-shadow: 0 0 10px #ff2e63;
         }
 
         .content-section p,
@@ -153,10 +165,10 @@
         .content-section input[type="date"],
         .content-section input[type="time"] {
             width: 100%;
-            padding: 14px;
+            padding: 15px;
             margin-bottom: 20px;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             background: #2e3b55;
             color: white;
             font-size: 18px;
@@ -175,15 +187,15 @@
         }
 
         .content-section button {
-            padding: 14px 28px;
+            padding: 15px 30px;
             background: #ff2e63;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
             color: white;
             font-weight: bold;
-            font-size: 18px;
-            transition: background 0.3s ease;
+            font-size: 20px;
+            transition: background 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 10px 30px rgba(255, 46, 99, 0.3);
         }
 
@@ -199,7 +211,7 @@
         .assignment-item {
             background: #2e3b55;
             padding: 22px;
-            border-radius: 10px;
+            border-radius: 12px;
             margin-bottom: 20px;
             display: flex;
             flex-direction: column;
@@ -248,7 +260,7 @@
             font-size: 16px;
             background: #3a4a69;
             color: white;
-            border-radius: 8px;
+            border-radius: 10px;
             border: none;
             cursor: pointer;
             transition: background 0.3s ease, box-shadow 0.3s ease;
@@ -259,6 +271,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
+        /* Celebration Animation Styling */
         .celebration {
             position: fixed;
             top: 0;
@@ -331,6 +344,7 @@
             }
         }
 
+        /* Responsive Design */
         @media (max-width: 768px) {
             .sidebar {
                 width: 100%;
@@ -383,7 +397,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="dashboard-container">
         <div class="sidebar">
             <h2>Taskmatrix</h2>
             <div class="nav-item">
@@ -512,8 +526,8 @@
         function addAssignment() {
             const assignmentName = document.getElementById('assignmentName').value;
             const assignmentNotes = document.getElementById('assignmentNotes').value;
-            const assignmentDueDate = document.getElementById('assignmentDueDate').value;
-            const assignmentCreatedDate = document.getElementById('assignmentCreatedDate').value;
+            const assignmentDueDate = document.getElement.getElementById('assignmentDueDate').value;
+            const assignmentCreatedDate = document.getElement.getElementById('assignmentCreatedDate').value;
 
             if (assignmentName === '') {
                 alert('Please enter an assignment name');
