--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             width: 95%;
             max-width: 1400px;
             height: 90%;
-            border-radius: 15px;
+            border-radius: 20px;
             background: linear-gradient(145deg, #1b263b, #0a1524);
-            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 20px rgba(255, 255, 255, 0.05);
+            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.6), -10px -10px 30px rgba(255, 255, 255, 0.05);
+            overflow: hidden;
         }
 
         /* Sidebar Styling */
@@ -40,13 +41,14 @@
             flex-direction: column;
             align-items: center;
             padding: 30px 20px;
-            box-shadow: 10px 0 20px rgba(0, 0, 0, 0.5);
+            box-shadow: 10px 0 30px rgba(0, 0, 0, 0.6);
+            overflow-y: auto;
         }
 
         .sidebar h2 {
             font-size: 28px;
             color: #ff2e63;
-            text-shadow: 0 0 8px rgba(255, 46, 99, 0.8);
+            text-shadow: 0 0 10px rgba(255, 46, 99, 0.8);
             margin-bottom: 50px;
         }
 
@@ -61,10 +63,10 @@
             font-size: 20px;
             font-weight: bold;
             padding: 15px 20px;
-            border-radius: 12px;
+            border-radius: 15px;
             display: block;
             text-align: center;
-            transition: background 0.3s ease, transform 0.3s ease;
+            transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
@@ -72,8 +74,8 @@
         .sidebar .nav-item a.active {
             background: #ff2e63;
             color: #ffffff;
-            transform: scale(1.05);
-            box-shadow: 0 5px 25px rgba(255, 46, 99, 0.5);
+            transform: scale(1.1);
+            box-shadow: 0 5px 30px rgba(255, 46, 99, 0.5);
         }
 
         /* Content Area Styling */
@@ -84,21 +86,25 @@
             display: flex;
             flex-direction: column;
             gap: 40px;
+            background: #1b263b;
+            border-radius: 20px;
+            box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
         }
 
         .content-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 2px solid #1b263b;
+            border-bottom: 2px solid #2e3b55;
             padding-bottom: 20px;
         }
 
         .content-header h1 {
-            font-size: 36px;
+            font-size: 40px;
             font-weight: bold;
             color: #ff2e63;
-            text-shadow: 0 0 10px #ff2e63;
+            text-shadow: 0 0 10px #ff2e63, 0 0 20px #ff2e63;
         }
 
         .content-header .user-info {
@@ -115,7 +121,7 @@
         }
 
         .user-info span {
-            font-size: 20px;
+            font-size: 22px;
             font-weight: bold;
             color: #e0e1dd;
         }
@@ -123,23 +129,23 @@
         /* Content Section Styling */
         .content-section {
             background: #1b263b;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5), 0 0 20px rgba(255, 46, 99, 0.3);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.7), inset 0 0 20px rgba(255, 46, 99, 0.3);
             transition: all 0.3s ease;
         }
 
         .content-section h2 {
-            font-size: 32px;
+            font-size: 34px;
             margin-bottom: 20px;
             color: #ff2e63;
-            text-shadow: 0 0 10px #ff2e63;
+            text-shadow: 0 0 12px #ff2e63;
         }
 
         .content-section p,
         .content-section ul {
-            font-size: 18px;
-            line-height: 1.6;
+            font-size: 20px;
+            line-height: 1.7;
             margin-bottom: 20px;
             color: #e0e1dd;
         }
@@ -149,13 +155,13 @@
         }
 
         .content-section ul li {
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
 
         .content-section label {
             display: block;
-            margin-bottom: 10px;
-            font-size: 18px;
+            margin-bottom: 12px;
+            font-size: 20px;
             color: #e0e1dd;
         }
 
@@ -165,14 +171,14 @@
         .content-section input[type="date"],
         .content-section input[type="time"] {
             width: 100%;
-            padding: 15px;
+            padding: 16px;
             margin-bottom: 20px;
             border: none;
-            border-radius: 12px;
+            border-radius: 15px;
             background: #2e3b55;
             color: white;
-            font-size: 18px;
-            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+            font-size: 20px;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
         }
 
@@ -187,21 +193,21 @@
         }
 
         .content-section button {
-            padding: 15px 30px;
+            padding: 16px 32px;
             background: #ff2e63;
             border: none;
-            border-radius: 12px;
+            border-radius: 15px;
             cursor: pointer;
             color: white;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 22px;
             transition: background 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 10px 30px rgba(255, 46, 99, 0.3);
+            box-shadow: 0 10px 40px rgba(255, 46, 99, 0.3);
         }
 
         .content-section button:hover {
             background: #d81b60;
-            box-shadow: 0 10px 30px rgba(255, 46, 99, 0.5);
+            box-shadow: 0 10px 40px rgba(255, 46, 99, 0.5);
         }
 
         .assignment-list {
@@ -210,20 +216,20 @@
 
         .assignment-item {
             background: #2e3b55;
-            padding: 22px;
-            border-radius: 12px;
+            padding: 24px;
+            border-radius: 15px;
             margin-bottom: 20px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: flex-start;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .assignment-item:hover {
             transform: scale(1.05);
-            box-shadow: 0 5px 30px rgba(255, 46, 99, 0.5);
+            box-shadow: 0 5px 30px rgba(255, 46, 99, 0.6);
         }
 
         .assignment-item div {
@@ -231,36 +237,36 @@
         }
 
         .assignment-item span {
-            font-size: 18px;
+            font-size: 20px;
             color: #ffffff;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             display: block;
         }
 
         .assignment-item p {
             margin-top: 0;
-            font-size: 16px;
+            font-size: 18px;
             color: #cccccc;
             margin-bottom: 20px;
         }
 
         .assignment-item time {
-            font-size: 14px;
+            font-size: 16px;
             color: #bbbbbb;
         }
 
         .assignment-actions {
             display: flex;
             justify-content: flex-end;
-            gap: 10px;
+            gap: 12px;
         }
 
         .assignment-actions button {
-            padding: 10px 16px;
-            font-size: 16px;
+            padding: 12px 18px;
+            font-size: 18px;
             background: #3a4a69;
             color: white;
-            border-radius: 10px;
+            border-radius: 12px;
             border: none;
             cursor: pointer;
             transition: background 0.3s ease, box-shadow 0.3s ease;
@@ -294,7 +300,7 @@
         }
 
         .celebration h1 {
-            font-size: 50px;
+            font-size: 52px;
             color: #ff2e63;
             text-shadow: 0 0 15px #ffffff, 0 0 25px #ff2e63, 0 0 50px #ff2e63;
             animation: celebrationAnimation 1s ease forwards;
@@ -344,6 +350,24 @@
             }
         }
 
+        /* Scrollbar Styling */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #1b263b;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #3a4a69;
+            border-radius: 5px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #4b5b7d;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .sidebar {
@@ -364,26 +388,26 @@
             }
 
             .content-header h1 {
-                font-size: 28px;
+                font-size: 32px;
             }
         }
 
         @media (max-width: 480px) {
             .content-header h1 {
-                font-size: 24px;
+                font-size: 28px;
             }
 
             .sidebar h2 {
-                font-size: 20px;
+                font-size: 22px;
             }
 
             .sidebar .nav-item a {
-                font-size: 16px;
+                font-size: 18px;
                 padding: 10px;
             }
 
             .user-info span {
-                font-size: 16px;
+                font-size: 18px;
             }
 
             .content-section {
@@ -526,8 +550,8 @@
         function addAssignment() {
             const assignmentName = document.getElementById('assignmentName').value;
             const assignmentNotes = document.getElementById('assignmentNotes').value;
-            const assignmentDueDate = document.getElement.getElementById('assignmentDueDate').value;
-            const assignmentCreatedDate = document.getElement.getElementById('assignmentCreatedDate').value;
+            const assignmentDueDate = document.getElementById('assignmentDueDate').value;
+            const assignmentCreatedDate = document.getElementById('assignmentCreatedDate').value;
 
             if (assignmentName === '') {
                 alert('Please enter an assignment name');
