--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
             background: linear-gradient(145deg, #1b263b, #0a1524);
             box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.6), -10px -10px 30px rgba(255, 255, 255, 0.05);
             overflow: hidden;
+            position: relative;
+        }
+
+        /* Ethereal Background with Lines */
+        .background-lines {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            background: repeating-linear-gradient(
+                45deg,
+                transparent,
+                transparent 10px,
+                rgba(100, 61, 136, 0.2) 10px,
+                rgba(100, 61, 136, 0.2) 20px
+            );
+            pointer-events: none;
         }
 
         /* Sidebar Styling */
@@ -43,6 +62,7 @@
             padding: 30px 20px;
             box-shadow: 10px 0 30px rgba(0, 0, 0, 0.6);
             overflow-y: auto;
+            z-index: 2; /* Above the background lines */
         }
 
         .sidebar h2 {
@@ -90,6 +110,7 @@
             border-radius: 20px;
             box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
+            z-index: 2; /* Above the background lines */
         }
 
         .content-header {
@@ -422,6 +443,7 @@
 </head>
 <body>
     <div class="dashboard-container">
+        <div class="background-lines"></div>
         <div class="sidebar">
             <h2>Taskmatrix</h2>
             <div class="nav-item">
