--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taskmatrix Dashboard</title>
     <style>
-        body{margin:0;padding:0;background:#0d1b2a;color:#fff;font-family:'Roboto',sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;overflow:hidden;position:relative}
+        body{margin:0;padding:0;background:#0d1b2a;color:#ffffff;font-family:'Roboto',sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;overflow:hidden;position:relative}
         .a{display:flex;width:95%;max-width:1400px;height:90%;border-radius:20px;background:linear-gradient(145deg,#1b263b,#0a1524);box-shadow:10px 10px 30px rgba(0,0,0,.6),-10px -10px 30px rgba(255,255,255,.05);overflow:hidden;position:relative;animation:fadeIn 1s ease-in-out}
         .b{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1;background:repeating-linear-gradient(45deg,transparent,transparent 10px,rgba(100,61,136,.2) 10px,rgba(100,61,136,.2) 20px);pointer-events:none;opacity:.7;animation:moveBackground 5s linear infinite}
         .c{width:280px;background:#0d1b2a;border-right:2px solid #1b263b;display:flex;flex-direction:column;align-items:center;padding:30px 20px;box-shadow:10px 0 30px rgba(0,0,0,.6);overflow-y:auto;z-index:2;animation:slideIn .5s ease-in-out}
